Change font, fix homepage on mobile & secondary button

--- a/src/Button.scss
+++ b/src/Button.scss
@@ -18,8 +18,8 @@
     border-radius:  $buttonBorderRadius;
     box-shadow: none;
     border: none;
-    background:#dae8df;
-    color:$buttonPrimary;
+    background:$buttonSecondary;
+    color:$buttonSecondaryColour;
     font-size: 18px;
     cursor: pointer;
     font-weight: 500;
