--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -4,16 +4,21 @@ $accent:#fd4848;
 $font-family: 'Mountains of Christmas', cursive;
 $background: #FFF1C8;
 $primary: #499f68;
-$buttonPrimary: #d0eedb;
+$buttonPrimary: #499f68;
 $buttonPrimaryColour:white;
+$buttonSecondary:#dae8df;
+$buttonSecondaryColour:#499f68;
+
+
 
 $accent:#435473;
 $navText: white;
 $primary: #313A4C;
-$font-family: 'Montserrat';
+$font-family: 'Montserrat Alternates';
 $background: #6AB28C;
 $buttonPrimary: #ffda71;
 $buttonPrimaryColour:#74572c;
 $buttonBorderRadius: 3px;
-
+$buttonSecondary:#dae8df;
+$buttonSecondaryColour:#74572c;
 /* #ffb54a */
